[gd_scene load_steps=7 format=3 uid="uid://dvgjgo15mejd5"]

[ext_resource type="Script" path="res://main/MainScene.gd" id="1_taeg8"]
[ext_resource type="PackedScene" uid="uid://cobfhoumngplw" path="res://levels/LevelOne.tscn" id="2_c4he4"]
[ext_resource type="PackedScene" uid="uid://pqhskrc7sus3" path="res://assets/player/Player.tscn" id="3_b84rs"]
[ext_resource type="PackedScene" uid="uid://nqwpeea32sbq" path="res://assets/jars/Jars.tscn" id="4_bem7a"]
[ext_resource type="PackedScene" uid="uid://bovl8whpndnfl" path="res://ui/jar_open/JarOpen.tscn" id="5_aocm4"]
[ext_resource type="PackedScene" uid="uid://g7b8tujdjthf" path="res://ui/jam_indicator/JamIndicator.tscn" id="5_skfyb"]

[node name="Main" type="Node2D"]
y_sort_enabled = true
position = Vector2(-2, 1)
script = ExtResource("1_taeg8")

[node name="LevelOne" parent="." instance=ExtResource("2_c4he4")]
y_sort_enabled = true

[node name="Player" parent="." instance=ExtResource("3_b84rs")]
position = Vector2(584, 375)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1216
limit_bottom = 832

[node name="Jars" parent="." node_paths=PackedStringArray("game") groups=["interactable"] instance=ExtResource("4_bem7a")]
y_sort_enabled = true
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(196611, 0, 3, 917516, 131072, 0, 1245192, 131072, 0, 327701, 131072, 3, 786444, 131072, 3, 851998, 131072, 3, 655377, 131072, 2, 1310753, 131072, 3, 1638439, 131072, 3, 2424868, 131072, 3, 2031630, 196608, 0, 2162698, 196608, 1, 2162735, 196608, 1, 2162734, 196608, 1, 2162739, 196608, 1, 2162740, 196608, 1, 917552, 65536, 3, 1245239, 131072, 3, 131130, 131072, 3, 327721, 0, 2)
game = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)

[node name="PopUps" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = 1.0
offset_right = -2.0
offset_bottom = 1.0

[node name="JamIndicator" parent="CanvasLayer" instance=ExtResource("5_skfyb")]
offset_left = 149.25
offset_right = -570.75
offset_bottom = -480.0
scale = Vector2(0.5, 0.5)

[node name="JarOpen" parent="CanvasLayer" instance=ExtResource("5_aocm4")]
anchors_preset = -1
anchor_left = 0.118273
anchor_top = 0.161265
anchor_right = 1.11827
anchor_bottom = 0.161265
offset_left = 5.34343
offset_top = 2.59281
offset_right = -714.654
offset_bottom = 2.59281
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
